--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -28,6 +29,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "normalize-styl": "^4.1.1",
     "pug": "^2.0.0-rc.4",
+    "push-dir": "^0.4.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1"
   }
