--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt": "^1.0.0-rc11"
   },
   "devDependencies": {
+    "@nuxtjs/google-tag-manager": "^1.0.1",
     "babel-eslint": "^8.0.1",
     "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
