--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
+    "@nuxtjs/pwa": "^1.0.2",
     "axios": "^0.16.2",
     "nuxt": "^1.0.0-rc11"
   },
