fix vscode debug

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceRoot}/start"
+      "program": "${workspaceRoot}/"
     },
     {
       "type": "node",
