--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
-    "dev-debug": "node --debug node_modules/.bin/nuxt"
+    "dev-debug": "node --inspect node_modules/nuxt/bin/nuxt"
   },
   "dependencies": {
     "@nuxtjs/pwa": "^1.0.2",
@@ -25,7 +25,7 @@
     "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.1.1",
+    "eslint-plugin-html": "^4.0.0-alpha.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
