--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "image-webpack-loader": "^3.4.2",
     "normalize-styl": "^4.1.1",
     "pug": "^2.0.0-rc.4",
     "push-dir": "^0.4.1",
