--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "pug": "^2.0.0-rc.4",
     "push-dir": "^0.4.1",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1"
+    "stylus-loader": "^3.0.1",
+    "v-mask": "^1.3.0",
+    "vee-validate": "^2.0.0-rc.19"
   }
 }
