--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@nuxtjs/google-tag-manager": "^1.0.1",
     "babel-eslint": "^8.0.1",
+    "babel-preset-env": "^1.6.0",
     "eslint": "^4.9.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
